Bug 120451 - kde5: Impress presentation mode crashes in single-monitor setup
Summary: kde5: Impress presentation mode crashes in single-monitor setup
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.2.0
Keywords:
: 120776 (view as bug list)
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2018-10-09 10:42 UTC by Michael Weghorn
Modified: 2018-10-23 18:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
GDB backtrace (9.36 KB, text/plain)
2018-10-09 10:44 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2018-10-09 10:42:54 UTC
version: master build as of commit 260701270abc7997996625449cd3d40f8b4f7f49
VCL: kde5 on X11 (the gtk3 VCL plugin e.g. works fine)
platform: Debian testing, Plasma 5 desktop

Steps to reproduce:

0) make sure that only a single screen is connected/active
1) open a new presentation in LibreOffice Impress
2) start presentation mode, e.g. by pressing F5

Result: LibreOffice crashes

Note: The crash does not occur when multiple screens are active.
Comment 1 Michael Weghorn 2018-10-09 10:44:18 UTC
Created attachment 145516 [details]
GDB backtrace
Comment 2 Xisco Faulí 2018-10-22 16:41:33 UTC
*** Bug 120776 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2018-10-23 07:11:48 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f806a2832aee62efc0e0404f7c24d53aaaf814d0

tdf#120451: Use primary screen if requested screen doesn't exist

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Katarina Behrens (Inactive) 2018-10-23 07:20:45 UTC
No crash an
Comment 5 Katarina Behrens (Inactive) 2018-10-23 07:22:05 UTC
Oh noes, again:

No crash anymore w/ the above commit. You still need to click into the blank screen to start the presentation b/c of bug 119718 though
Comment 6 Michael Weghorn 2018-10-23 18:37:41 UTC
Fix verified with

Version: 6.2.0.0.alpha1+
Build ID: 25af42bc70e1a0a61d2ea90d7b0ef1ed6000ed69
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); Calc: threaded