tdf#120451: Use primary screen if requested screen doesn't exist

Change-Id: I3e570bdeddc82f1d8cd46a362964e53527e6c152